--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ input.border-danger.form-control + p {
    <div class="form-group">
     <label for="date">Date of birth:</label>
     <input type="date" class="form-control" id="pwd" name="date" placeholder="dd-mm-YYYY">
-    <p>*Date format must be in dd-mm-YYYY</p>
+    <span>*A valid date of birth with dd-mm-yyyy format... Though the possibility of you matching this is thin because browsers have their default date format.. but don't worry just type!</span>
   </div>
    <div class="form-group">
     <label for="url">Website:</label>
