update on regex

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ input.border-danger.form-control + p {
 <body>
 
 	<div class="mx-auto text-center"> 
-		<h1> Genesys Backend Regex task.</h1>
+		<h1> Regex task.</h1>
 		<p>Please start filling the text field to see the super regExp in action. <i> <b>GoodLuck! </b> </i> </p>
 </div>
 	<form action="/action_page.php" class="mx- auto container mt-5 ">
